# Labs

./: CMakeLists.txt  Lab4TaskA.cpp  Lab4TaskB.cpp  calc.cpp  calc.h  class.cpp  class.h  drob.cpp  drob.h  functions.cpp  functions.h  lab1  lab1.cpp  lab2  lab2.cpp  lab2WithFunctions.cpp  lab3.cpp  main.cpp  stack.h  test.h  test1.cpp  tests.cpp  tests.h
